[package]
name = "lib-lvm"
version = "0.1.0"
authors = ["Akhil Mohan <akhil.mohan@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
snafu = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
